changed comment send button and fixed scrollbar in comment section

--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,12 @@ code {
 
 /* width */
 ::-webkit-scrollbar {
-  position: fixed !important;
   width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 /* Handle */
